Changes to loom object